Signed-off-by: bhrigu <genuisy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
 <body>
 
 <div class="wrapper">
-   <div class="fignia">
-       <audio controls id="audio">
+    <p><button id="audiobutton">
+            <img src="img/audio1.jpg" alt="" style="vertical-align:middle">
+
+        </button></p>
+    <div class="fignia">
+       <audio id="audio">
+
        <source src="audio/tibet.ogg" type="audio/ogg">
        <source src="audio/tibet.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
 
+
     </audio></div>
+
     <div class="header">
         <div class="logo"><img src="img/logo.gif" alt=""/></div>
     </div>
-    
+
     <div class="description">
         <h1 class="title">
             ВИШНУ САХАСРАНАМА
@@ -49,21 +56,21 @@
             </div>
             <div class="word">
                 <div class="block"><span class="arrow-e"></span>
-                    <h2 class="title">nama</h2>
+                    <h2 class="title">विश्वं</h2>
 
                     <div class="item">nama</div>
                 </div>
             </div>
             <div class="word">
                 <div class="block"><span class="arrow-w"></span>
-                    <h2 class="title">nama</h2>
+                    <h2 class="title">विश्वं</h2>
 
                     <div class="item">nama</div>
                 </div>
             </div>
             <div class="word">
                 <div class="block"><span class="arrow-e"></span>
-                    <h2 class="title">nama</h2>
+                    <h2 class="title">विश्वं</h2>
 
                     <div class="item">nama
                     </div>
@@ -74,6 +81,7 @@
             <div class="top"></div>
             <div class="bottom"></div>
             </div>
+
     </div>
 </div>
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
