--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
 </head>
 
 <body>
+<p><button id="audiobutton">
+    <img src="img/audio1.jpg" alt="" style="vertical-align:middle">
 
+</button></p>
 <div class="wrapper">
-   <div class="fignia">
-       <audio controls id="audio">
-       <source src="audio/tibet.ogg" type="audio/ogg">
-       <source src="audio/tibet.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
 
-    </audio></div>
+
+    <div class="fignia">
+        <audio loop id="audio">
+
+            <source src="audio/tibet.ogg" type="audio/ogg">
+            <source src="audio/tibet.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+
+
+        </audio></div>
+
     <div class="header">
         <div class="logo"><img src="img/logo.gif" alt=""/></div>
     </div>
-    
+
     <div class="description">
         <h1 class="title">
             ВИШНУ САХАСРАНАМА
         </h1>
-    <div class="intro"> <a href="page2.htm">Перевод Вишну Сахасранама</a></div>
+        <div class="intro"> <a href="page2.html">Вишну Сахасранама на санскрите</a></div>
     </div>
     <div class="main">
 
@@ -33,37 +41,48 @@
 
             <div class="word">
 
-                <div class="block"><span class="arrow-e"></span>
+                <div class="block">
+                    <span class="arrow-e"></span>
+                    <div class="plus"></div>
 
-                    <h2 class="title">विश्वं</h2>
+                    <h2 class="title">विश्वस्मै </h2>
 
                     <div class="item">VIZVAM - Вселенная, все, Тот кто пронизывает все</div>
                 </div>
             </div>
+
             <div class="word">
-                <div class="block"><span class="arrow-w"></span>
-                    <h2 class="title">विष्णु</h2>
+                <div class="block">
+                    <span class="arrow-w"></span>
+                    <div class="plus"></div>
+                    <h2 class="title"> विष्णवे</h2>
 
                     <div class="item">VIZNUR - Вишну,всепроникающий</div>
                 </div>
             </div>
             <div class="word">
-                <div class="block"><span class="arrow-e"></span>
-                    <h2 class="title">nama</h2>
+                <div class="block">
+                    <span class="arrow-e"></span>
+                    <div class="plus"></div>
+                    <h2 class="title">वषट्काराय</h2>
 
                     <div class="item">nama</div>
                 </div>
             </div>
             <div class="word">
-                <div class="block"><span class="arrow-w"></span>
-                    <h2 class="title">nama</h2>
+                <div class="block">
+                    <span class="arrow-w"></span>
+                    <div class="plus"></div>
+                    <h2 class="title">भूतभव्यभवत्प्रभवे</h2>
 
                     <div class="item">nama</div>
                 </div>
             </div>
             <div class="word">
-                <div class="block"><span class="arrow-e"></span>
-                    <h2 class="title">nama</h2>
+                <div class="block">
+                    <span class="arrow-e"></span>
+                    <div class="plus"></div>
+                    <h2 class="title">भूतकृते</h2>
 
                     <div class="item">nama
                     </div>
@@ -72,9 +91,11 @@
             </div>
 
             <div class="top"></div>
-            <div class="bottom"></div>
-            </div>
+            <div class="bottom"><p><div class="loadmore"></div></p></div>
+        </div>
+
     </div>
+
 </div>
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
