--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         <div class="line">
 
             <div class="word">
-
+                <div class="om"></div>
                 <div class="block">
+
                     <span class="arrow-e"></span>
+
                     <div class="plus"></div>
 
                     <h2 class="title">विश्वस्मै </h2>
@@ -52,6 +54,7 @@
             </div>
 
             <div class="word">
+                <div class="om"></div>
                 <div class="block">
                     <span class="arrow-w"></span>
                     <div class="plus"></div>
@@ -61,6 +64,7 @@
                 </div>
             </div>
             <div class="word">
+                <div class="om"></div>
                 <div class="block">
                     <span class="arrow-e"></span>
                     <div class="plus"></div>
@@ -70,6 +74,7 @@
                 </div>
             </div>
             <div class="word">
+                <div class="om"></div>
                 <div class="block">
                     <span class="arrow-w"></span>
                     <div class="plus"></div>
@@ -79,6 +84,7 @@
                 </div>
             </div>
             <div class="word">
+                <div class="om"></div>
                 <div class="block">
                     <span class="arrow-e"></span>
                     <div class="plus"></div>
